@@ -138,39 +138,41 @@ HB_FUNC ( _SETFONT )
       strikeout = 1;
    }
 
-   font = PrepareFont ( (char *) hb_parc(2), hb_parni(3), bold, italic, underline, strikeout, hb_parnl(8), hb_parnl(9) ) ;
-   SendMessage( HWNDparam( 1 ), (UINT) WM_SETFONT, (WPARAM) font, 1 ) ;
+   font = PrepareFont( (char *) hb_parc( 2 ), hb_parni( 3 ), bold, italic, underline, strikeout, hb_parnl( 8 ), hb_parnl( 9 ) ) ;
+   SendMessage( HWNDparam( 1 ), (UINT) WM_SETFONT, (WPARAM) font, MAKELPARAM( TRUE, 0 ) ) ;
    hb_retnl( (LONG) font );
 }
 
 HB_FUNC ( SETFONTNAMESIZE )
 {
+   HFONT font ;
    int bold = FW_NORMAL;
    int italic = 0;
    int underline = 0;
    int strikeout = 0;
 
-   if ( hb_parl (4) )
+   if ( hb_parl( 4 ) )
    {
       bold = FW_BOLD;
    }
 
-   if ( hb_parl (5) )
+   if ( hb_parl( 5 ) )
    {
       italic = 1;
    }
 
-   if ( hb_parl (6) )
+   if ( hb_parl( 6 ) )
    {
       underline = 1;
    }
 
-   if ( hb_parl (7) )
+   if ( hb_parl( 7 ) )
    {
       strikeout = 1;
    }
 
-    SendMessage( HWNDparam( 1 ) , (UINT)WM_SETFONT , (WPARAM) PrepareFont ( ( char * ) hb_parc(2) , (LPARAM) hb_parni(3),bold,italic,underline,strikeout,hb_parnl(8),hb_parnl(9)) , 1 ) ;
+   font = PrepareFont( (char *) hb_parc( 2 ), (LPARAM) hb_parni( 3 ), bold, italic, underline, strikeout, hb_parnl( 8 ), hb_parnl( 9 ) );
+   SendMessage( HWNDparam( 1 ), (UINT) WM_SETFONT, (WPARAM) font, MAKELPARAM( TRUE, 0 ) ) ;
 }
 
 void getwinver( OSVERSIONINFO * pOSvi );
